Correct delimiter value propagation. Adress comm.
Fix the way the delimiter is being passed around, removing the CSV
member - since its instantiation is a singleton - and pushing it through
function arguments.

The commit fixes a few issues with the "header" URL attribute:
- these was no longer usable, since it wasn't "consumed" by
RestSqlQueryAction before generating the answer (triggering an error
responce on use);
- its value was only checked against "absent", so an incorrect value
(typo like "abaent") could have silently generated an unexpected reply.
- missing

Documentation for the "delimiter" attribute has also been added.